Bug 1807652 - Rename some methods to not conflict with aliases r=mstange

We have some aliases with the names of LockedRWFromAnyThread and
LockedRWOnThread. We also had some methods with the same name. clang and gcc
that were before version 12 weren't complaining about that. But apparently
starting from gcc 13, it became an error. This patch renames the methods so we
don't conflict with these aliases anymore.

Differential Revision: https://phabricator.services.mozilla.com/D169507